workplace/log/build_2024-05-26_00-22-36/learning/stderr.log
/usr/local/lib/python3.6/dist-packages/setuptools/command/install.py:37: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  setuptools.SetuptoolsDeprecationWarning,
  File "/home/mi/workplace/install/learning/lib/python3.6/site-packages/learning/realsense_cam_suber.py", line 61
    def main(args==None):
                  ^
SyntaxError: invalid syntax

